@@ -56,13 +56,13 @@ a.back_news:hover	{color:rgba(204,204,204,1);}
 	============================================= */
 #donor_graph, #sector_graph	{background-color:rgba(255,255,255,1); color:rgba(68,68,68,1); border:1px solid rgba(255,255,255,1);}
 a.ask					{color:rgba(255,255,255,1);}
-a.ask.donor				{background-color:rgba(130,130,130,1);}
-a.ask.donor:hover		{background-color:rgba(158,158,158,1);}
-a.ask.sector			{background-color:rgba(107,107,107,1);}
-a.ask.sector:hover		{background-color:rgba(136,136,136,1);}
+a.ask.donor				{background-color:rgba(206,131,0,1);}
+a.ask.donor:hover		{background-color:rgba(255,163,0,1);}
+a.ask.sector			{background-color:rgba(206,131,0,1);}
+a.ask.sector:hover		{background-color:rgba(255,163,0,1);}
 .main_peak_wrap			{background-color:rgba(255,255,255,1);}
-.peak.donor				{border-top:20px solid rgba(130,130,130,1);}
-.peak.sector			{border-top:20px solid rgba(107,107,107,1);}
+.peak.donor				{border-top:20px solid rgba(206,131,0,1);}
+.peak.sector			{border-top:20px solid rgba(206,131,0,1);}
 a.view_all_money		{background-color:rgba(15,15,15,0.7); color:rgba(204,204,204,1);}
 a.view_all_money:hover	{background-color:rgba(15,15,15,0.9); color:rgba(255,255,255,1);}
 
@@ -70,7 +70,7 @@ a.view_all_money:hover	{background-color:rgba(15,15,15,0.9); color:rgba(255,255,
 /*	Map styles (front page)
 	============================================= */
 .map_wrap				{background-color:rgba(0,0,0,0.8);}
-.map_info				{color:rgba(255,255,255,1); background-color:rgba(160,160,160,0.9);}
+.map_info				{color:rgba(255,255,255,1); background-color:rgba(206,131,0,1);}
 .map_no_info			{color:rgba(255,255,255,1);}
 .map_percent			{color:rgba(255,255,255,1); background-color:rgba(15,15,15,0.9);}
 .map_percent span		{color:rgba(255,255,255,1);}
@@ -85,12 +85,12 @@ a.view_all_money:hover	{background-color:rgba(15,15,15,0.9); color:rgba(255,255,
 	============================================= */
 span.stats_title		{color:rgba(204,204,204,1);}
 span.stats_title.view	{color:rgba(255,255,255,1);}
-span.stats_num			{color:rgba(130,130,130,1);}
+span.stats_num			{color:rgba(255,163,0,1);}
 span.stats_num.view		{color:rgba(255,255,255,1);}
 .declare.stats			{color:rgba(204,204,204,1);}
 a.stats_link			{color:rgba(204,204,204,1); background-color:rgba(15,15,15,0.7);}
 a.stats_link:hover		{background-color:rgba(15,15,15,0.9);}
-a.stats_link.missing span	{color:rgba(130,130,130,1);}
+a.stats_link.missing span	{color:rgba(255,163,0,1);}
 
 
 /*	Active / Ended projects styles
@@ -112,22 +112,22 @@ a.read:hover			{color:rgba(255,255,255,1);}
 
 /*	Generic styles
 	============================================= */
-.list_peak					{border-right:30px solid rgba(130,130,130,1);}
-.list_head_title			{background-color:rgba(130,130,130,1); color:rgba(255,255,255,1);}
+.list_peak					{border-right:30px solid rgba(206,131,0,1);}
+.list_head_title			{background-color:rgba(206,131,0,1); color:rgba(255,255,255,1);}
 .list_stats_title			{color:rgba(255,255,255,1);}
 .list_stats_num				{color:rgba(255,255,255,1);}
-a.button					{background-color:rgba(158,158,158,1); color:rgba(255,255,255,1);}
-a.button:hover				{background-color:rgba(130,130,130,1);}
+a.button					{background-color:rgba(206,131,0,1); color:rgba(255,255,255,1);}
+a.button:hover				{background-color:rgba(255,163,0,1);}
 a.csv_download				{background-color:rgba(192,192,192,0.24); color:rgba(204,204,204,1);}
 a.csv_download:hover		{background-color:rgba(184,184,184,0.49); color:rgba(255,255,255,1);}
 
 	
 /*	For url #view=donors & all #view=donor_*
 	============================================= */
-.donors_peak				{border-right:30px solid rgba(130,130,130,1);}
-.donors_peak.view			{border-right:30px solid rgba(130,130,130,1);}
-.donors_head_title			{background-color:rgba(130,130,130,1); color:rgba(255,255,255,1);}
-.donors_head_title.view		{background-color:rgba(130,130,130,1);}
+.donors_peak				{border-right:30px solid rgba(206,131,0,1);}
+.donors_peak.view			{border-right:30px solid rgba(206,131,0,1);}
+.donors_head_title			{background-color:rgba(206,131,0,1); color:rgba(255,255,255,1);}
+.donors_head_title.view		{background-color:rgba(206,131,0,1);}
 
 
 /*	For url #view=donor_activities
@@ -244,8 +244,8 @@ table.data td			{color:rgba(255,255,255,1); border:1px solid rgba(204,204,204,1)
 
 /*	Data Investigators alert
 	============================================= */
-a.data_invest			{color:rgba(198,198,198,1); background-color:rgba(149,149,149,0.4);}
-a.data_invest:hover		{color:rgba(255,255,255,1); background-color:rgba(149,149,149,0.8);}
+a.data_invest			{color:rgba(255,255,255,1); background-color:rgba(206,131,0,1);}
+a.data_invest:hover		{color:rgba(255,255,255,1); background-color:rgba(255,163,0,1);}
 
 
 /*	Footer
@@ -290,11 +290,11 @@ recipient-country span:nth-of-type(2)	{color:rgba(255,255,255,1);}
 
 /*	Start and End dates
 	============================================= */
-span.span_activity-date						{background-color:rgba(66,66,66,0.9);}
+span.span_activity-date						{background-color:rgba(206,131,0,1);}
 activity-date[type="start-actual"]			{color:rgba(255,255,255,1);}
 activity-date[type="end-actual"]			{color:rgba(255,255,255,1);}
-activity-date[type="start-actual"]:before	{color:rgba(204,204,204,1);}
-activity-date[type="end-actual"]:before		{color:rgba(204,204,204,1);}
+activity-date[type="start-actual"]:before	{color:rgba(255,255,255,1);}
+activity-date[type="end-actual"]:before		{color:rgba(255,255,255,1);}
 
 
 /*	Who's invloved?
@@ -336,7 +336,7 @@ img.sector_pie					{background-color:rgba(255,255,255,1);}
 	============================================= */
 budget					{border-top:1px solid rgba(143,143,143,1);}
 budget:last-of-type	 	{border-bottom:0px solid rgba(143,143,143,1);}
-budget:nth-of-type(1):before				{color:rgba(255,255,255,1); background-color:rgba(56,56,56,0.9);}
+budget:nth-of-type(1):before				{color:rgba(255,255,255,1); background-color:rgba(206,131,0,1);}
 budget:nth-of-type(1) period-start:before 	{color:rgba(255,255,255,1); border-bottom:2px solid rgba(56,56,56,0.9);}
 budget:nth-of-type(1) period-end:before	  	{color:rgba(255,255,255,1); border-bottom:2px solid rgba(56,56,56,0.9);}
 budget:nth-of-type(1) value:before		  	{color:rgba(255,255,255,1); border-bottom:2px solid rgba(56,56,56,0.9);}
@@ -351,7 +351,7 @@ transaction							{border-top:1px solid rgba(143,143,143,1);}
 transaction a						{color:rgba(125,125,125,1);}
 transaction a:hover					{color:rgba(173,173,173,1);}
 transaction:last-of-type			{border-bottom:0px solid rgba(143,143,143,1);}
-transaction:nth-of-type(1):before	{color:rgba(255,255,255,1); background-color:rgba(56,56,56, 0.9);}
+transaction:nth-of-type(1):before	{color:rgba(255,255,255,1); background-color:rgba(206,131,0,1);}
 
 transaction:nth-of-type(1) transaction-date:before	{color:rgba(255,255,255,1); border-bottom:2px solid rgba(56,56,56, 0.9);}
 transaction:nth-of-type(1) transaction-type:before	{color:rgba(255,255,255,1); border-bottom:2px solid rgba(56,56,56, 0.9);}
@@ -384,12 +384,12 @@ activity-website:hover	{color:rgba(125,125,125,1);}
 
 /*	Activity Status
 	============================================= */
-activity-status[code="1"]	{background-color:rgba(169,169,169,1);}
-activity-status[code="2"]	{background-color:rgba(191,191,191,1);}
-activity-status[code="3"]	{background-color:rgba(134,134,134,1);}
-activity-status[code="4"]	{background-color:rgba(152,152,152,1);}
-activity-status[code="5"]	{background-color:rgba(132,132,132,1);}
-activity-status				{background-color:rgba(152,152,152,1); color:rgba(68,68,68,1);}
+activity-status[code="1"]	{background-color:rgba(206,131,0,1);}
+activity-status[code="2"]	{background-color:rgba(206,131,0,1);}
+activity-status[code="3"]	{background-color:rgba(206,131,0,1);}
+activity-status[code="4"]	{background-color:rgba(206,131,0,1);}
+activity-status[code="5"]	{background-color:rgba(206,131,0,1);}
+activity-status				{background-color:rgba(206,131,0,1); color:rgba(255,200,105,1);}
 activity-status:before		{color:rgba(255,255,255,1);}
 
 
