@@ -145,7 +145,7 @@ a.csv_download:hover		{background-color:rgba(115,182,255,0.49); color:rgba(255,2
 
 /*	Table header styles
 	============================================= */
-th.titles					{color:#668; border-bottom:1px solid rgba(51,51,68,1);}
+th.titles					{color:rgba(102,102,136,1); border-bottom:1px solid rgba(51,51,68,1);}
 
 
 /*	Table for Header logo and Translations
@@ -389,7 +389,7 @@ activity-status[code="2"]	{background-color:rgba(204,141,230,1);}
 activity-status[code="3"]	{background-color:rgba(71,255,78,1);}
 activity-status[code="4"]	{background-color:rgba(255,130,71,1);}
 activity-status[code="5"]	{background-color:rgba(255,71,71,1);}
-activity-status				{background-color:rgba(255,130,71,1);}
+activity-status				{background-color:rgba(255,130,71,1); color:rgba(68,68,68,1);}
 activity-status:before		{color:rgba(255,255,255,1);}
 
 
