@@ -88,7 +88,7 @@ span.stats_title.view	{color:rgba(255,0,0,1);}
 span.stats_num			{color:rgba(130,0,0,1);}
 span.stats_num.view		{color:rgba(255,0,0,1);}
 .declare.stats			{color:rgba(204,0,0,1);}
-a.stats_link			{color:rgba(204,0,0,1);}
+a.stats_link			{color:rgba(204,0,0,1); background-color:rgba(15,0,0,0.7);}
 a.stats_link:hover		{background-color:rgba(15,0,0,0.9);}
 a.stats_link.missing span	{color:rgba(130,0,0,1);}
 
@@ -165,12 +165,6 @@ table.country.min td.name	{color:rgba(255,0,0,1);}
 table.title				{border-bottom:10px solid rgba(255,0,0,1);}
 table.title td			{color:rgba(255,0,0,1);}
 table.title td.sort		{color:rgba(204,0,0,1);}
-
-
-/*	Table for Stats (key figures)
-	============================================= */
-table.stats td			{background-color:rgba(15,0,0,0.7);}
-table.stats td:hover	{background-color:rgba(15,0,0,0.9);}
 
 
 /*	Table for Active / Ended projects
@@ -315,7 +309,7 @@ participating-org[role="accountable"]:after		{color:rgba(204,0,0,1);}
 
 /*	Reported by
 	============================================= */
-reporting-org 					{color:rgba(255,0,0,1);}
+reporting-org 					{color:rgba(255,0,0,1); background-color:rgba(56,0,0,0.4)}
 reporting-org:before 			{color:rgba(204,0,0,1);}
 
 
@@ -395,7 +389,7 @@ activity-status[code="2"]	{background-color:rgba(191,0,0,1);}
 activity-status[code="3"]	{background-color:rgba(134,0,0,1);}
 activity-status[code="4"]	{background-color:rgba(152,0,0,1);}
 activity-status[code="5"]	{background-color:rgba(132,0,0,1);}
-activity-status				{background-color:rgba(152,0,0,1);}
+activity-status				{background-color:rgba(152,0,0,1); color:rgba(68,0,0,1);}
 activity-status:before		{color:rgba(255,0,0,1);}
 
 
